--- a/计算属性/计算属性.html
+++ b/计算属性/计算属性.html
@@ -10,8 +10,8 @@
 
 <body>
     <div id="app">
-        <!-- {{text.split(',').reverse().join(',')}}
-        <br> 下面是使用计算属性 {{reverseText}} -->
+        {{text.split(',').reverse().join(',')}}
+        <br> 下面是使用计算属性 {{reverseText}}
         计算属性的缓存<br>
         {{now}} <br>
         通过methods拿到时间戳（需要加括号）<br>
